force-app/main/default/objects/Year_Week__c/Year_Week__c.object-meta.xml
<CustomObject>
    <label>Year Week</label>
    <nameField>
        <label>Year Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Year Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>