force-app/main/default/objects/Year_Week__c/fields/Brownie_Points__c.field-meta.xml
<CustomField>
    <fullName>Brownie_Points__c</fullName>
    <label>Brownie Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>