force-app/main/default/objects/Year_Week__c/fields/Chess_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Chess_Ratings__c</fullName>
    <label>Chess Ratings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>