force-app/main/default/objects/Year_Week__c/fields/Leetcode_Sum_Count__c.field-meta.xml
<CustomField>
    <fullName>Leetcode_Sum_Count__c</fullName>
    <label>Leetcode Sum Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>