force-app/main/default/objects/Year_Week__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Year__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Weight__c</columns>
    <columns>Leetcode_Sum_Count__c</columns>
    <columns>Chess_Ratings__c</columns>
    <columns>Brownie_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>